<resources>
    <string name="app_name">WanAndroidApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_navigation">导航\n</string>
    <string name="title_project">导航\n</string>
    <string name="title_official">公众号</string>
    <string name="title_mine">我的</string>
</resources>