<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mlf.wanandroid.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_navigation"
        android:name="com.mlf.wanandroid.ui.navigtion.NavigationFragment"
        android:label="@string/title_navigation"
        tools:layout="@layout/fragment_navigation" />
    <fragment
        android:id="@+id/navigation_project"
        android:name="com.mlf.wanandroid.ui.project.ProjectFragment"
        android:label="@string/title_project"
        tools:layout="@layout/fragment_project" />
    <fragment
        android:id="@+id/navigation_official"
        android:name="com.mlf.wanandroid.ui.officia.OfficialFragment"
        android:label="@string/title_official"
        tools:layout="@layout/fragment_official" />
    <fragment
        android:id="@+id/navigation_mine"
        android:name="com.mlf.wanandroid.ui.mine.MineFragment"
        android:label="@string/title_mine"
        tools:layout="@layout/fragment_mine" />


</navigation>